add couple social links, review img alt text, add initial css

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>mkgl // Mikaël Geljić</title>
-  <!-- link rel="stylesheet" href="css/mkgl.css" /-->
+  <link rel="stylesheet" href="css/mkgl.css" />
   <!-- script src="script.js"></script -->
 </head>
 <body>
@@ -13,7 +13,7 @@
   </header>
 
   <section id="about">
-    <img src="img/mkgl-lego.jpg" alt="the guy behind the lego head" width="100" height="100" />
+    <img src="img/mkgl-lego.jpg" alt="lego head social pic" width="100" height="100" />
     <h2>Mikaël Geljić</h2>
     <p>thinking, sketching, playing chords or drawing cars; happily crafting and polishing <a href="https://magnolia-cms.com">@magnolia_cms</a>'s user interface.</p>
   </section>
@@ -22,7 +22,9 @@
     <ul>
       <li><a href="https://twitter.com/mikaelgeljic" target="_blank">Twitter</a></li>
       <li><a href="https://instagram.com/mkgl" target="_blank">Instagram</a></li>
+      <li><a href="https://foursquare.com/user/1360056" target="_blank">Foursquare</a></li>
       <li><a href="https://linkedin.com/in/mikaelgeljic" target="_blank">LinkedIn</a></li>
+      <li><a href="https://github.com/mkgl" target="_blank">GitHub</a>
     </ul>
   </section>
 
